--- a/app/assets/stylesheets/todo-app.css
+++ b/app/assets/stylesheets/todo-app.css
@@ -97,11 +97,10 @@ ol {
   width: 16px;
   height: 16px;
 }
-.TodoItem-overduelabel {
+.TodoItem-dueDate {
+  font-size: 10px;
+  color: blue;
   margin-left: 10px;
-  color: #c53030;
-  font-size: 12px;
-  display: inline;
 }
 .TodoSectionTitle-remainingCount {
   margin-left: 10px;
