--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -4,17 +4,46 @@
           <p class="TodoSectionTitle-remainingCount"><%= todos.completed.count %> / <%=todos.count%></p>
         </div>
         <ul>
-        <% todos.each do |todo|%>
-        <li class="TodoItem">
-          <label class="TodoItem-container">
-              <input class="TodoItem-checkbox" type="checkbox">
-              <%= todo.todo_text%>
-              <%if show_due_date%>
-              <p class="TodoItem-dueDate"><%= todo.due_date.to_s(:short)%></p>
+         <% todos.each do |todo|%>
+           <li class="TodoItem">
+           <label class="TodoItem-container">
+              <% if section_title!="Overdue" %>
+                <%if todo.completed%>
+                  <input class="TodoItem-checkbox" type="checkbox" checked>
+                  <p class="strikethrough"><%= todo.todo_text%></p>
+                  <%if show_due_date%>
+                        <p class="TodoItem-dueDate"><%= todo.due_date.to_s(:short)%></p>
+                  <%end%>
+                  <img class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
+                <%end%>
+             <%end%>
+
+              <% if section_title!="Overdue" %>
+                <%if !todo.completed%>
+                  <input class="TodoItem-checkbox" type="checkbox" >
+                  <%= todo.todo_text%>
+                  <%if show_due_date%>
+                    <p class="TodoItem-dueDate"><%= todo.due_date.to_s(:short)%></p>
+                  <%end%>
+                  <img class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
+                <%end%>
               <%end%>
-              <img class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
+
+
+
+
+
+
+               <% if section_title=="Overdue" && !todo.completed%>
+                <input class="TodoItem-checkbox" type="checkbox">
+                <%= todo.todo_text%>
+                <%if show_due_date%>
+                  <p class="TodoItem-dueDate"><%= todo.due_date.to_s(:short)%></p>
+                <%end%>
+                <img class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
+              <%end%>
             </label>
-          </li>
-        <% end %>
-      </ul>
-      </section>
+           </li>
+         <% end %>
+        </ul>
+  </section>
