--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,7 +8,7 @@
       </section>
        <%= render partial:"todo-section",locals: {
          section_title: "Due Today",
-         todos: Todo.duetoday,show_due_date:false
+         todos: Todo.duetoday,show_due_date:false,show_todo_data:true
          }%>
        <%= render partial:"todo-section",locals: {
          section_title: "Overdue",
