--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,12 +8,21 @@
       </section>
        <%= render partial:"todo-section",locals: {
          section_title: "Due Today",
-         todos: Todo.duetoday,show_due_date:false,show_todo_data:true
+         todos: Todo.duetoday,
+         show_due_date:false,
+         strike_value:true
          }%>
        <%= render partial:"todo-section",locals: {
          section_title: "Overdue",
-         todos: Todo.overdue,show_due_date:true}%>
-       <%= render partial:"todo-section",locals: {section_title: "Due Later",
-         todos: Todo.duelater,show_due_date:true}%>
+         todos: Todo.overdue,
+         show_due_date:true,
+         strike_value:false
+         }%>
+       <%= render partial:"todo-section",
+       locals: {section_title: "Due Later",
+         todos: Todo.duelater,
+         show_due_date:true,
+         strike_value:true
+         }%>
 </article>
   </main>
