--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -1,34 +1,47 @@
  <section class="TodoSection">
         <div class="TodoSectionTitle" display: flex>
            <p class="TodoSectionTitle-text"><%=section_title%></p>
-           <p class="TodoSectionTitle-remainingCount"><%= todos.completed.count %> / <%=todos.count%></p>
-        </div>
+           <p class="TodoSectionTitle-remainingCount">
+               <%= todos.completed.count %> /
+               <%=todos.count%>
+               </p>
+         </div>
         <ul>
          <% todos.each do |todo|%>
            <li class="TodoItem">
            <label class="TodoItem-container">
+           <%= form_with(url: "/todos/#{todo.id}",method: "PUT") do %>
+              <input class="TodoItem-checkbox"
+                     type="checkbox"
+                     name="completed"
+                     <%=todo.completed ? "checked":""%>
+                     onclick="this.form.submit()"
+                     />
+           <%end%>
               <% if strike_value %>
-                <%if todo.completed%>
-                    <input class="TodoItem-checkbox" type="checkbox" checked>
-                    <p class="strikethrough"><%= todo.todo_text%></p>
-                <%end%>
-                <%if !todo.completed%>
-                    <input class="TodoItem-checkbox" type="checkbox" >
-                    <%= todo.todo_text%>
-                <%end%>
-                <%if show_due_date%>
-                      <p class="TodoItem-dueDate"><%= todo.due_date.to_s(:short)%></p>
-                <%end%>
-                      <img class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
+                      <%if todo.completed%>
+                          <p class="strikethrough">
+                              <%= todo.todo_text%>
+                          </p>
+                      <%end%>
+                     <%if !todo.completed%>
+                              <%= todo.todo_text%>
+                      <%end%>
               <%end%>
+
                <% if !strike_value %>
-                  <input class="TodoItem-checkbox" type="checkbox">
                   <%= todo.todo_text%>
-                  <%if show_due_date%>
-                    <p class="TodoItem-dueDate"><%= todo.due_date.to_s(:short)%></p>
-                  <% end %>
-                <img class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
               <%end%>
+
+                <%if show_due_date%>
+                      <p class="TodoItem-dueDate">
+                      <%= todo.due_date.to_s(:short)%>
+                      </p>
+                <%end%>
+
+                  <%= form_with(url: "/todos/#{todo.id}",method: "delete") do %>
+                     <input type='image' class="TodoItem-delete" src="t.png" alt="Delete Icon" height="20" width="20">
+                  <%end%>
             </label>
            </li>
          <% end %>
