--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,11 +1,12 @@
     <main class="TodoPageMain">
     <article>
     <h1 class="TodoPage-title">My Todo-List</h1>
-      <section class="AddTodo" display:flex>
-        <input class="AddTodo-Text" type="text" placeholder="What's Next?" />
-        <input class="AddTodo-Date" type="date" />
-        <input class="AddTodo-Button" type="button" value="Add" />
-      </section>
+
+      <%= form_with(url: "/todos", method: "post", class:"AddTodo") do %>
+         <%= text_field_tag(:todo_text,nil, class:'AddTodo-Text', placeholder: "What's Next?" )%>
+         <%= date_field_tag(:due_date, "Todo's Date", class:"AddTodo-Date") %>
+         <%= button_tag('Add',type:"Submit",class:"AddTodo-Button")%>
+      <%end%>
        <%= render partial:"todo-section",locals: {
          section_title: "Due Today",
          todos: Todo.duetoday,
