--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
 
   <body>
      <% if @current_user %>
-     <p class="UserHeader"><%= @current_user.first_name%></p>
+     <p class="UserHeader">
+     <%= @current_user.first_name%>
+
+     <%= link_to "Sign-Out",destroy_session_path,method: "delete"%>
+     </p>
      <%end%>
     <%= yield %>
 
