--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,19 +8,19 @@
            <%end%>
          <%= render partial:"todo-section",locals: {
                     section_title: "Due Today",
-                    todos: Todo.duetoday,
+                    todos: @todos.duetoday,
                     show_due_date:false,
                     strike_value:true
               }%>
          <%= render partial:"todo-section",locals: {
                     section_title: "Overdue",
-                    todos: Todo.overdue,
+                    todos: @todos.overdue,
                     show_due_date:true,
                     strike_value:false
                   }%>
          <%= render partial:"todo-section",locals: {
                     section_title: "Due Later",
-                    todos: Todo.duelater,
+                    todos: @todos.duelater,
                     show_due_date:true,
                     strike_value:true
                   }%>
