--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -14,3 +14,8 @@
   display: flex;
   justify-content: space-between;
 }
+.Flash {
+  color: darkred;
+  margin-bottom: 20px;
+  font-size: 16px;
+}
