--- a/app/assets/stylesheets/users-app.css
+++ b/app/assets/stylesheets/users-app.css
@@ -1,21 +1,29 @@
 .Newusers-title {
   margin-bottom: 20px;
+  font-weight: lighter;
+  color: teal;
+  padding: 10px;
 }
 .Form-section {
   margin-bottom: 20px;
 }
 .form-data {
-  font-size: 20px;
+  font-size: 16px;
   padding: 8px;
+  border-color: lightblue;
+  border-radius: 5px;
 }
 .FormInput-label {
   color: #666666;
+  font-size: 16px;
   margin-bottom: 8px;
+  font-weight: lighter;
 }
 .form-submit {
   font-size: 20px;
   padding: 10px;
-  background-color: aliceblue;
+  color: white;
+  background-color: green;
   border: 0;
   border-radius: 4px;
 }
