--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,16 @@
 
   <body>
      <% if @current_user %>
-     <p class="UserHeader">
-     <%= @current_user.first_name%>
-
-     <%= link_to "Sign-Out",destroy_session_path,method: "delete"%>
-     </p>
+         <p class="UserHeader">
+         Welcome  <%= @current_user.first_name%>  !
+         <%= link_to "Sign-Out",destroy_session_path,method: "delete"%>
+         </p>
      <%end%>
      <% if flash[:error] %>
-     <p class="Flash">
-     <%= flash[:error] %>
-     </p>
+        <p class="Flash">
+        <%= flash[:error] %>
+        </p>
      <%end%>
     <%= yield %>
-
   </body>
 </html>
